--- a/backend/api/main.yml
+++ b/backend/api/main.yml
@@ -1,12 +1,19 @@
-name: Main Taski workflow
-
+# .github/workflows/main.yml
+name: Main Taski Workflow
+# Перечень событий-триггеров, при которых должен запускаться workflow
 on:
+  # Событие push возникает,
+  # когда изменения исходного кода приходят на сервер GitHub
   push:
+    # Отслеживаем изменения только в ветке main
     branches:
       - main
 
+# Перечень задач
 jobs:
+  # Запустить тестирование приложения
   tests:
+    # Разворачиваем окружение:
     runs-on: ubuntu-latest
     # Блок services аналогичен docker-compose.yml
     services:
@@ -25,18 +32,26 @@ jobs:
         # В результате тесты опять решат, что базы нет, — и упадут
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
+    # Копируем код проекта
     - name: Check out code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
+    # Устанавливаем Python с помощью action
     - name: Set up Python
       uses: actions/setup-python@v4
+    # В action setup-python@v4 передаём параметр — версию Python
       with:
         python-version: 3.9
+
+    # Обновляем pip, устанавливаем flake8 и flake8-isort, 
+    # устанавливаем зависимости проекта
+    # Чтобы запустить тесты, нужно установить зависимости
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
-    # Этот шаг дополним переменными для доступа к БД
+        pip install -r ./backend/requirements.txt
+    # Запускаем flake8
+    # Этот шаг дополним переменными для доступа к БД:
     - name: Test with flake8 and django tests
       # Добавляем env-переменные для доступа к БД
       env:
@@ -47,11 +62,14 @@ jobs:
         # Поэтому подключаемся к 127.0.0.1:5432
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
+      # Вызываем flake8 и указываем ему,
+      # что нужно проверить файлы только в папке backend/
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
       run: |
         python -m flake8 backend/
         cd backend/
         python manage.py test
-  Добавляем новую задачу: деплой приложения
+  # Собрать и отправить образ приложения на Docker Hub
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -63,7 +81,7 @@ jobs:
       - name: Set up Docker Buildx
         # Установка сборщика контейнеров Docker
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         # Авторизация на Docker Hub
         uses: docker/login-action@v2
         # При помощи with передаём в action параметры username и password
@@ -86,7 +104,7 @@ jobs:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: tim-cobra/taski_backend:latest 
+          tags: axeunder/taski_backend:latest
   frontend_tests:
     runs-on: ubuntu-latest
 
@@ -119,7 +137,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -129,8 +147,8 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: tim-cobra/taski_frontend:latest
-build_gateway_and_push_to_docker_hub:
+          tags: axeunder/taski_frontend:latest
+  build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -138,7 +156,7 @@ build_gateway_and_push_to_docker_hub:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -148,47 +166,56 @@ build_gateway_and_push_to_docker_hub:
         with:
           context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на Docker Hub
-          tags: tim-cobra/taski_gateway:latest
-deploy:
-  runs-on: ubuntu-latest
-  needs: 
-    # Дождёмся билда всех образов Taski
-    - build_and_push_to_docker_hub
-    - build_frontend_and_push_to_docker_hub
-    - build_gateway_and_push_to_docker_hub
-  steps:
-  - name: Checkout repo
-    uses: actions/checkout@v3
-  # Копируем docker-compose.production.yml на продакшен-сервер
-  - name: Copy docker-compose.yml via ssh
-    uses: appleboy/scp-action@master
-  # Передаём параметры для action appleboy/scp-action:
-    with:
-      host: ${{ secrets.HOST }}
-      username: ${{ secrets.USER }}
-      key: ${{ secrets.SSH_KEY }}
-      passphrase: ${{ secrets.SSH_PASSPHRASE }}
-      source: "docker-compose.production.yml"
-      target: "taski"
-  - name: Executing remote ssh commands to deploy
-    uses: appleboy/ssh-action@master
-    with:
-      host: ${{ secrets.HOST }}
-      username: ${{ secrets.USER }}
-      key: ${{ secrets.SSH_KEY }}
-      passphrase: ${{ secrets.SSH_PASSPHRASE }}
-      # Параметр script передаёт в action appleboy/ssh-action команды,
-      # которые нужно выполнить на сервере, 
-      # с которым установлено соединение
-      script: |
-        cd taski
-        # Выполняет pull образов с Docker Hub
-        sudo docker compose -f docker-compose.production.yml pull
-        # Перезапускает все контейнеры в Docker Compose
-        sudo docker compose -f docker-compose.production.yml down
-        sudo docker compose -f docker-compose.production.yml up -d
-        # Выполняет миграции и сбор статики
-        sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-        sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-        sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          tags: axeunder/taski_gateway:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      # Дождёмся билда всех образов Taski
+      - build_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+    # Копируем docker-compose.production.yml на продакшен-сервер
+    - name: Copy docker-compose.yml via ssh
+      uses: appleboy/scp-action@master
+    # Передаём параметры для action appleboy/scp-action:
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        source: "docker-compose.production.yml"
+        target: "taski"
+    - name: Executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        # Параметр script передаёт в action appleboy/ssh-action команды,
+        # которые нужно выполнить на сервере, 
+        # с которым установлено соединение
+        script: |
+          cd taski
+          # Выполняет pull образов с Docker Hub
+          sudo docker compose -f docker-compose.production.yml pull
+          # Перезапускает все контейнеры в Docker Compose
+          sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml up -d
+          # Выполняет миграции и сбор статики
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - name: Send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: Деплой успешно выполнен!
