--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,20 +58,32 @@ jobs:
     needs: tests
     steps:
       - name: Check out the repo
+        # Получение исходного кода из репозитория
         uses: actions/checkout@v3
-      
       - name: Set up Docker Buildx
+        # Установка сборщика контейнеров Docker
         uses: docker/setup-buildx-action@v2
-      
       - name: Login to Docker 
+        # Авторизация на Docker Hub
         uses: docker/login-action@v2
+        # При помощи with передаём в action параметры username и password
         with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+          # Хорошо ли держать логин и пароль прямо в коде workflow?
+          # Нет, это нехорошо
       - name: Push to DockerHub
+        # Одновременный билд и пуш образа в Docker Hub
         uses: docker/build-push-action@v4
         with:
+          # Параметр context: ./backend/ указывает, что нужный Dockerfile 
+          # находится в ./backend/
           context: ./backend/
+          # Параметр push: true указывает, что образ нужно не только собрать,
+          # но и отправить на Docker Hub
           push: true
-          tags: tim-cobra/kittygram_backend:latest
+          # В параметре tags задаётся название и тег для образа.
+          # Для каждого пересобранного образа 
+          # устанавливаем тег latest, чтобы потом
+          # на сервере и в docker-compose.yml не указывать версию
+          tags: timcobra48/taski_backend:latest
